--- a/0925~dataton/0925_dataton.ipynb
+++ b/0925~dataton/0925_dataton.ipynb
@@ -35,7 +35,7 @@
     "sns.set_theme(context='notebook',\n",
     "              style='darkgrid',\n",
     "              palette='pastel',\n",
-    "              font='Malgun Gothic',\n",
+    "              font='NanumBarunGothic',\n",
     "              rc=custom_params)"
    ],
    "metadata": {
@@ -62,34 +62,34 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "# # 데이터 호출하기\n",
-    "# data_dir = os.getenv('HOME')+'/aiffel/kaggle_kakr_housing/data2'\n",
-    "# # data_dir = os.getenv('HOME')+'/aiffel/workplace/project/project_5'\n",
-    "# \n",
-    "# aisles_data_path = join(data_dir, 'aisles.csv')\n",
-    "# departments_data_path = join(data_dir, 'departments.csv') \n",
-    "# order_products__prior_data_path = join(data_dir, 'order_products__prior.csv') \n",
-    "# order_products__train_data_path = join(data_dir, 'order_products__train.csv') \n",
-    "# orders_data_path = join(data_dir, 'orders.csv') \n",
-    "# products_data_path = join(data_dir, 'products.csv') \n",
-    "# sample_data_path = join(data_dir, 'sample_submission.csv') \n",
-    "# # total_data_path = join(data_dir, 'total_df.csv') \n",
-    "# \n",
-    "# aisles = pd.read_csv(aisles_data_path)\n",
-    "# dep = pd.read_csv(departments_data_path)\n",
-    "# prior = pd.read_csv(order_products__prior_data_path)\n",
-    "# train = pd.read_csv(order_products__train_data_path)\n",
-    "# orders = pd.read_csv(orders_data_path)\n",
-    "# products = pd.read_csv(products_data_path)\n",
-    "# sample = pd.read_csv(sample_data_path)\n",
-    "# # df = pd.read_csv(total_data_path)\n",
-    "# \n",
-    "# print(f'aisles data dim : {aisles.shape}')\n",
-    "# print(f'departments data dim : {dep.shape}')\n",
-    "# print(f'order_products_prior data dim : {order_products_prior.shape}')\n",
-    "# print(f'order_products_train data dim : {order_products_train.shape}')\n",
-    "# print(f'orders data dim : {orders.shape}')\n",
-    "# print(f'products data dim : {products.shape}')"
+    "# 데이터 호출하기\n",
+    "data_dir = os.getenv('HOME')+'/aiffel/kaggle_kakr_housing/data2'\n",
+    "# data_dir = os.getenv('HOME')+'/aiffel/workplace/project/project_5'\n",
+    "\n",
+    "aisles_data_path = join(data_dir, 'aisles.csv')\n",
+    "departments_data_path = join(data_dir, 'departments.csv') \n",
+    "order_products__prior_data_path = join(data_dir, 'order_products__prior.csv') \n",
+    "order_products__train_data_path = join(data_dir, 'order_products__train.csv') \n",
+    "orders_data_path = join(data_dir, 'orders.csv') \n",
+    "products_data_path = join(data_dir, 'products.csv') \n",
+    "sample_data_path = join(data_dir, 'sample_submission.csv') \n",
+    "# total_data_path = join(data_dir, 'total_df.csv') \n",
+    "\n",
+    "aisles = pd.read_csv(aisles_data_path)\n",
+    "dep = pd.read_csv(departments_data_path)\n",
+    "prior = pd.read_csv(order_products__prior_data_path)\n",
+    "train = pd.read_csv(order_products__train_data_path)\n",
+    "orders = pd.read_csv(orders_data_path)\n",
+    "products = pd.read_csv(products_data_path)\n",
+    "sample = pd.read_csv(sample_data_path)\n",
+    "# df = pd.read_csv(total_data_path)\n",
+    "\n",
+    "print(f'aisles data dim : {aisles.shape}')\n",
+    "print(f'departments data dim : {dep.shape}')\n",
+    "print(f'order_products_prior data dim : {order_products_prior.shape}')\n",
+    "print(f'order_products_train data dim : {order_products_train.shape}')\n",
+    "print(f'orders data dim : {orders.shape}')\n",
+    "print(f'products data dim : {products.shape}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,13 +105,13 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "aisles = pd.read_csv(\"aisles.csv\")\n",
-    "dep = pd.read_csv(\"departments.csv\")\n",
-    "prior = pd.read_csv(\"order_products__prior.csv\")\n",
-    "train = pd.read_csv(\"order_products__train.csv\")\n",
-    "order = pd.read_csv(\"orders.csv\")\n",
-    "product = pd.read_csv(\"products.csv\")\n",
-    "submission = pd.read_csv(\"sample_submission.csv\")"
+    "# aisles = pd.read_csv(\"aisles.csv\")\n",
+    "# dep = pd.read_csv(\"departments.csv\")\n",
+    "# prior = pd.read_csv(\"order_products__prior.csv\")\n",
+    "# train = pd.read_csv(\"order_products__train.csv\")\n",
+    "# order = pd.read_csv(\"orders.csv\")\n",
+    "# product = pd.read_csv(\"products.csv\")\n",
+    "# submission = pd.read_csv(\"sample_submission.csv\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -179,41 +179,41 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "# def reduce_mem_usage(train_data):\n",
-    "#     \n",
-    "# #  iterate through all the columns of a dataframe and modify the data type to reduce memory usage.\"\"\"\n",
-    "#     start_mem = train_data.memory_usage().sum() / 1024**2\n",
-    "#     print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
-    "# \n",
-    "#     for col in train_data.columns:\n",
-    "#         col_type = train_data[col].dtype\n",
-    "# \n",
-    "#         if col_type != object:\n",
-    "#             c_min = train_data[col].min()\n",
-    "#             c_max = train_data[col].max()\n",
-    "#             if str(col_type)[:3] == 'int':\n",
-    "#                 if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.int8)\n",
-    "#                 elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.int16)\n",
-    "#                 elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.int32)\n",
-    "#                 elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.int64)  \n",
-    "#             else:\n",
-    "#                 if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.float16)\n",
-    "#                 elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
-    "#                     train_data[col] = train_data[col].astype(np.float32)\n",
-    "#                 else:\n",
-    "#                     train_data[col] = train_data[col].astype(np.float64)\n",
-    "#         else:\n",
-    "#             train_data[col] = train_data[col].astype('category')\n",
-    "#         end_mem = train_data.memory_usage().sum() / 1024**2\n",
-    "#         print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
-    "#         print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
-    "# \n",
-    "#     return train_data"
+    "def reduce_mem_usage(train_data):\n",
+    "\n",
+    "#  iterate through all the columns of a dataframe and modify the data type to reduce memory usage.\"\"\"\n",
+    "    start_mem = train_data.memory_usage().sum() / 1024**2\n",
+    "    print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
+    "\n",
+    "    for col in train_data.columns:\n",
+    "        col_type = train_data[col].dtype\n",
+    "\n",
+    "        if col_type != object:\n",
+    "            c_min = train_data[col].min()\n",
+    "            c_max = train_data[col].max()\n",
+    "            if str(col_type)[:3] == 'int':\n",
+    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.int8)\n",
+    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.int16)\n",
+    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.int32)\n",
+    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.int64)  \n",
+    "            else:\n",
+    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.float16)\n",
+    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
+    "                    train_data[col] = train_data[col].astype(np.float32)\n",
+    "                else:\n",
+    "                    train_data[col] = train_data[col].astype(np.float64)\n",
+    "        else:\n",
+    "            train_data[col] = train_data[col].astype('category')\n",
+    "        end_mem = train_data.memory_usage().sum() / 1024**2\n",
+    "        print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
+    "        print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
+    "\n",
+    "    return train_data"
    ],
    "metadata": {
     "collapsed": false,
@@ -229,13 +229,13 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "# reduce_mem_usage(prior)\n",
-    "# reduce_mem_usage(train)\n",
-    "# reduce_mem_usage(product)\n",
-    "# reduce_mem_usage(order)\n",
-    "# reduce_mem_usage(dep)\n",
-    "# reduce_mem_usage(aisles)\n",
-    "# print('complete!')"
+    "reduce_mem_usage(prior)\n",
+    "reduce_mem_usage(train)\n",
+    "reduce_mem_usage(product)\n",
+    "reduce_mem_usage(order)\n",
+    "reduce_mem_usage(dep)\n",
+    "reduce_mem_usage(aisles)\n",
+    "print('complete!')"
    ],
    "metadata": {
     "collapsed": false,
