--- a/1005_node/Bag_of_Words.ipynb
+++ b/1005_node/Bag_of_Words.ipynb
@@ -1,14 +1,125 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### keras Tokenizer 활용"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "799ce524f1f2850"
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T22:29:05.949359600Z",
+     "start_time": "2023-10-04T22:29:00.755726600Z"
+    }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag of Words : {'john': 1, 'likes': 3, 'to': 2, 'watch': 2, 'movies': 2, 'mary': 2, 'too': 1, 'also': 1, 'football': 1, 'games': 1}\n",
+      "단어장(Vocabulary)의 크기 : 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "\n",
+    "sentence = [\"John likes to watch movies. Mary likes movies too! Mary also likes to watch football games.\"]\n",
+    "\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(sentence) # 단어장 생성\n",
+    "bow = dict(tokenizer.word_counts) # 각 단어와 각 단어의 빈도를 bow에 저장\n",
+    "\n",
+    "print(\"Bag of Words :\", bow) # bow 출력\n",
+    "print('단어장(Vocabulary)의 크기 :', len(tokenizer.word_counts)) # 중복을 제거한 단어들의 개수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### scikit-learn CountVectorizer 활용"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "19924d2b90ddfc8f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag of Words :  [[1 1 1 1 3 2 2 2 1 2]]\n",
+      "각 단어의 인덱스 : {'john': 3, 'likes': 4, 'to': 7, 'watch': 9, 'movies': 6, 'mary': 5, 'too': 8, 'also': 0, 'football': 1, 'games': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "sentence = [\"John likes to watch movies. Mary likes movies too! Mary also likes to watch football games.\"]\n",
+    "\n",
+    "vector = CountVectorizer()\n",
+    "bow = vector.fit_transform(sentence).toarray()\n",
+    "\n",
+    "print('Bag of Words : ', bow) # 코퍼스로부터 각 단어의 빈도수를 기록한다.\n",
+    "print('각 단어의 인덱스 :', vector.vocabulary_) # 각 단어의 인덱스가 어떻게 부여되었는지를 보여준다."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T22:30:17.259057900Z",
+     "start_time": "2023-10-04T22:30:16.024940400Z"
+    }
+   },
+   "id": "ed1cc56d35d5c3ab"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "단어장(Vocabulary)의 크기 : 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('단어장(Vocabulary)의 크기 :', len(vector.vocabulary_))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T22:30:50.528598Z",
+     "start_time": "2023-10-04T22:30:50.519534300Z"
+    }
+   },
+   "id": "ba61eb691eda531"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d001473c54c3e9c9"
   }
  ],
  "metadata": {
