--- a/1005_node/DTM.ipynb
+++ b/1005_node/DTM.ipynb
@@ -38,13 +38,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.67\n",
+      "0.67\n",
+      "1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{:.2f}'.format(cos_sim(doc1, doc2))) #문서1과 문서2의 코사인 유사도\n",
+    "print('{:.2f}'.format(cos_sim(doc1, doc3))) #문서1과 문서3의 코사인 유사도\n",
+    "print('{:.2f}'.format(cos_sim(doc2, doc3))) #문서2과 문서3의 코사인 유사도"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T00:47:49.835593500Z",
+     "start_time": "2023-10-05T00:47:49.816915600Z"
+    }
+   },
+   "id": "a151f0e8e7adc0bc"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### scikit-learn CountVectorizer 활용\n",
+    "* 사이킷런의 CountVectorizer를 이용하여 DTM을 만드는 방법"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c5afbc67f4e45b55"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 1 1 0 1 1 0 1]\n",
+      " [0 0 0 0 1 1 1 0 1 0]\n",
+      " [1 1 1 0 1 1 0 1 0 1]]\n",
+      "{'john': 3, 'likes': 4, 'to': 7, 'watch': 9, 'movies': 6, 'mary': 5, 'too': 8, 'also': 0, 'football': 1, 'games': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "corpus = [\n",
+    "    'John likes to watch movies',\n",
+    "    'Mary likes movies too',\n",
+    "    'Mary also likes to watch football games',    \n",
+    "]\n",
+    "vector = CountVectorizer()\n",
+    "\n",
+    "print(vector.fit_transform(corpus).toarray()) # 코퍼스로부터 각 단어의 빈도수를 기록.\n",
+    "print(vector.vocabulary_) # 각 단어의 인덱스가 어떻게 부여되었는지를 보여준다."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-05T00:55:45.090807900Z",
+     "start_time": "2023-10-05T00:55:44.489515500Z"
+    }
+   },
+   "id": "c823eeaff74710fb"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "a151f0e8e7adc0bc"
+   "id": "aee281dd9049ef2e"
   }
  ],
  "metadata": {
