--- a/1006_node/WEAT_편향성.ipynb
+++ b/1006_node/WEAT_편향성.ipynb
@@ -357,13 +357,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사운드 엔지니어 상우(유지태 분)는 치매에 걸린 할머니(백성희 분)와\n",
+      " 젊은 시절 상처한 한 아버지(박인환 분), 고모(신신애 분)와 함께 살고 있다.\n",
+      " 어느 겨울 그는 지방 방송국 라디오 PD 은수(이영애 분)를 만난다.\n",
+      " 자연의 소리를 채집해 틀어주는 라디오 프로그램을 준비하는 은수는 상우와 녹음 여행을 떠난다.\n",
+      " 자연스레 가까워지는 두 사람은 어느 날, 은수의 아파트에서 밤을 보낸다.\n",
+      " 너무 쉽게 사랑에 빠진 두 사람... 상우는 주체할 수 없을 정도로 그녀에게 빨려든다.\n",
+      " 그러나 겨울에 만난 두 사람의 관계는 봄을 지나 여름을 맞이하면서 삐걱거린다.\n",
+      " 이혼 경험이 있는 은수는 상우에게 결혼할 생각이 없다며 부담스러운 표정을 내비친다.\n",
+      " \"어떻게 사랑이 변하니?...\"라고 묻는 상우에게 은수는 그저 \"헤어져\" 라고 단호하게 말한다.\n",
+      " 영원히 변할 것 같지 않던 사랑이 변하고, 그 사실을 받아들이지 못하는 상우는 어찌 할 바를 모른다.\n",
+      " 은수를 잊지 못하는 상우는 미련과 집착의 감정을 이기지 못하고 서울과 강릉을 오간다.\n",
+      "유사 이래 연령, 성별, 빈부의 차이와 정치적인 입장을 불문하고 일거에 국민을 통합해 온 '애국심'이라는 성역에 일침을 가하는 다큐멘터리. 재작년 전국 민족민주 유가족협의회의 장기농성을 다룬 인상적인 다큐멘터리 <민들레>를 만들었던 독립영화집단 '빨간 눈사람'이 우리 사회 구석구석을 발빠르게 돌아다니며 애국심과 민족주의가 강요되는 현장을 발굴하여 카메라에 담았다. 박홍 서강대 명예총장, 이도형 '한국논단' 발행인, 축구해설자 신문선, 홍세화, 박노해 등 사회 각계의 '스타'들이 등장해 저마다의 확고한 신념을 성토한다. 감독 이경순과 최하동하는 이 작품을 위해 3년간 백여 명을 인터뷰했다고 한다. 2001 올해의 독립영화상 수상.\n",
+      " 민족과 국가란 공동체에서 부단히 권력과 부를 얻는 자, 나아가 민족과 국가란 공동체에서 얻은 신분과 부귀를 영원히 그의 자손에게 대물림하려는 자, 그래서 민족과 국가란 공동체를 부단히 유지해야만 하는 자, 따라서 민족과 국가란 공동체의 당위성과 개인의 가치를 초월하는 그 존엄성을 끝도 없이 창조하고 되뇌어야 하는 자, 종국에는 민족과 국가란 공동체에 속해 있다고 태내에서부터 세뇌된 모든 이들의 삶과 행동에서 영원히 자기복제되는 순환의 고리, 영생하는 애국의 원동력은 그 순환의 골에서 온다.\n",
+      "엽기적인 살인사건이 발생한 장소를 관광하는 투어팀. 그 팀에서 관광객들은 살인사건과 관련하여 히스테리컬한 반응을 보이는데 과연 이들의 정체는? (Tourists see whrer a murder take place. They respond hysterically to the murder…what are they?)\n",
+      " 제46회 발라돌리드 국제영화제 (2001, 스페인)\n",
+      "착하지만 엉뚱한 태희(배두나 분), 예쁜 깍쟁이 혜주(이요원 분), 그림을 잘 그리는 지영(옥지영 분), 명랑한 쌍둥이 비류(이은실 분)와 온조(이은주 분)는 단짝친구들. 늘 함께였던 그들이지만 스무 살이 되면서 길이 달라진다. 증권회사에 입사한 혜주는 성공한 커리어우먼의 야심을 키우고 미술에 재능이 있는 지영은 유학을 꿈꾼다. 한편 태희는 봉사활동에서 알게 된 뇌성마비 시인을 좋아하는데...\n",
+      "  어느 날 지영이 길 잃은 새끼 고양이 티티를 만남면서 스무 살 그녀들의 삶에 고양이 한 마리가 끼어들게 된다. 혼자 있길 좋아하고, 쉽게 마음을 열지 않는 신비로운 동물 고양이. 고양이를 닮은 스무 살 그녀들. 고양이 티티와 함께 한 시간동안 삶은 예상못한 방향으로 흘러가지만 마침내 그녀들만의 해결책을 찾게 되는데... 사랑스런 몽상가 태희, 아름다운 야심가 혜주, 신비로운 아웃사이더 지영. 마지막으로 고양이를 부탁받은 사람은 누구일까?\n",
+      "인도 등 아시아 식민지에 처음 발을 디딘 뒤 여행하고 “경영”한 이들은 과연 누구였을까? 과거의 이미지들은, 이민과 인종 문제, ‘오리엔탈리즘’이 격렬히 충돌하고 있는 현재와 강력하게 공명한다.\n",
+      " [제19회 인디다큐페스티발]\n",
+      "홀로 살아가는 미국 할머니와 한국 할머니의 이야기. 공원에서 가끔 마주치게 되는 그들은 비록 언어 소통의 어려움을 겪지만 시간이 흘러감에 따라 서로 가까워져 그들의 외로움과 우정을 공유하게 된다. 겨울이 지나고 봄이 왔을 때 길가의 민들레 홀씨는 삶의 이치를 말해주듯 한 할머니의 주위를 맴돈다. (Two elderly widows, an American and a Korean, frequent the same park in Philadelphia and attempt a friendship, though the Korean widow speaks no English. Driven by loneliness and a spark of hope, they persevere within the limits of body language, and the outcome poses a question of life as fundamental as a flower.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('synopsis.txt', 'r', encoding='utf8')\n",
+    "for i in range(20):\n",
+    "        print(f.readline(), end='')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:13:15.538012100Z",
+     "start_time": "2023-10-06T04:13:15.517380600Z"
+    }
+   },
+   "id": "d37c81834d098dc6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "# 품사가 명사인 경우만 남겨 tokenized라는 변수명으로 저장\n",
+    "# 약 15분정도 걸립니다.\n",
+    "from konlpy.tag import Okt\n",
+    "okt = Okt()\n",
+    "tokenized = []\n",
+    "with open('synopsis.txt', 'r', encoding='utf8') as file:\n",
+    "    while True:\n",
+    "        line = file.readline()\n",
+    "        if not line: break\n",
+    "        words = okt.pos(line, stem=True, norm=True)\n",
+    "        res = []\n",
+    "        for w in words:\n",
+    "            if w[1] in [\"Noun\"]:      # \"Adjective\", \"Verb\" 등을 포함할 수도 있습니다.\n",
+    "                res.append(w[0])    # 명사일 때만 tokenized 에 저장하게 됩니다. \n",
+    "        tokenized.append(res)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:19:34.377123Z",
+     "start_time": "2023-10-06T04:14:54.716957700Z"
+    }
+   },
+   "id": "b489dbde5ed070e9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71156\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(tokenized))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:23:40.586954500Z",
+     "start_time": "2023-10-06T04:23:40.578198700Z"
+    }
+   },
+   "id": "851b63c2aab28665"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 추출된 결과로 embedding model 만들기"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9eeca2b26f022e69"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('작품', 0.8736620545387268),\n ('다큐멘터리', 0.8318464159965515),\n ('드라마', 0.8151986598968506),\n ('영화로', 0.7809855341911316),\n ('형식', 0.7749606966972351),\n ('소재', 0.7661241888999939),\n ('코미디', 0.7655311822891235),\n ('에마데딘', 0.7634376287460327),\n ('감동', 0.7599084377288818),\n ('주제', 0.7493578195571899)]"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "# tokenized에 담긴 데이터를 가지고 나만의 Word2Vec을 생성합니다. (Gensim 4.0 기준)\n",
+    "model = Word2Vec(tokenized, vector_size=100, window=5, min_count=3, sg=0)  \n",
+    "model.wv.most_similar(positive=['영화'])\n",
+    "\n",
+    "# Gensim 3.X 에서는 아래와 같이 생성합니다. \n",
+    "# model = Word2Vec(tokenized, size=100, window=5, min_count=3, sg=0)  \n",
+    "# model.most_similar(positive=['영화'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:24:12.563938500Z",
+     "start_time": "2023-10-06T04:24:09.800532200Z"
+    }
+   },
+   "id": "d537b90f7648e72d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('애정', 0.6997047662734985),\n ('행복', 0.6989068388938904),\n ('만남', 0.693990170955658),\n ('첫사랑', 0.6921367049217224),\n ('이별', 0.6894645690917969),\n ('아르튬', 0.6802223324775696),\n ('진심', 0.6798796653747559),\n ('가슴', 0.6789758801460266),\n ('연애', 0.6729995608329773),\n ('존경심', 0.6602395176887512)]"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive=['사랑'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:25:10.283150100Z",
+     "start_time": "2023-10-06T04:25:10.271974900Z"
+    }
+   },
+   "id": "1ca28e90c3d9b2ac"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('영화감독', 0.9041674137115479),\n ('시나리오', 0.8789856433868408),\n ('팬', 0.8743436336517334),\n ('대본', 0.8714762926101685),\n ('각색', 0.870575487613678),\n ('배우', 0.8693177700042725),\n ('예술가', 0.8646193742752075),\n ('오페라', 0.8644236922264099),\n ('감성', 0.8637799024581909),\n ('캐스팅', 0.8619714975357056)]"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive=['연극'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:25:16.009907200Z",
+     "start_time": "2023-10-06T04:25:15.999210600Z"
+    }
+   },
+   "id": "78e770c316e4923c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('우정은', 0.855998158454895),\n ('교감', 0.8423915505409241),\n ('로맨스', 0.8187311291694641),\n ('감정', 0.8181557655334473),\n ('허문', 0.8131846189498901),\n ('남녀', 0.7899187207221985),\n ('삼각관계', 0.7851055860519409),\n ('갈등', 0.7832767367362976),\n ('청춘', 0.7813847661018372),\n ('화해', 0.7784368991851807)]"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive=['우정'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T04:26:22.274060100Z",
+     "start_time": "2023-10-06T04:26:22.269173200Z"
+    }
+   },
+   "id": "4ef642812ef9301"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "e32a065e7f96a2d4"
+   "id": "6119a4920a441a7b"
   }
  ],
  "metadata": {
