--- a/1018_node/tensor.ipynb
+++ b/1018_node/tensor.ipynb
@@ -315,7 +315,7 @@
     "# 16비트 실수형을 32비트 실수형으로 변환\n",
     "f32 = tf.cast(f16, tf.float32)\n",
     "print(f32)\n",
-    "print(f16) # 새로운 변수에 지정해서 대상은 바뀌지 않음"
+    "print(f16)  # 새로운 변수에 지정해서 대상은 바뀌지 않음"
    ],
    "metadata": {
     "collapsed": false,
@@ -609,6 +609,263 @@
    "id": "8fc56b9ec1047185"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 텐서 연산"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4b09bf3b417ef46"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 0차원 텐서 연산"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8d39aa3a07c9c685"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(4, shape=(), dtype=int32)\n",
+      "tf.Tensor(0, shape=(), dtype=int32)\n",
+      "tf.Tensor(4, shape=(), dtype=int32)\n",
+      "tf.Tensor(0, shape=(), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1,2줄과 3,4줄은 같은것\n",
+    "print(tf.constant(2) + tf.constant(2))\n",
+    "print(tf.constant(2) - tf.constant(2))\n",
+    "print(tf.add(tf.constant(2), tf.constant(2)))\n",
+    "print(tf.subtract(tf.constant(2), tf.constant(2)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:41:28.557443100Z",
+     "start_time": "2023-10-18T08:41:28.535340800Z"
+    }
+   },
+   "id": "124a7fc4c1dd558c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(4, shape=(), dtype=int32)\n",
+      "tf.Tensor(1.0, shape=(), dtype=float64)\n",
+      "tf.Tensor(4, shape=(), dtype=int32)\n",
+      "tf.Tensor(1.0, shape=(), dtype=float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.constant(2) * tf.constant(2))\n",
+    "print(tf.constant(2) / tf.constant(2))\n",
+    "print(tf.multiply(tf.constant(2), tf.constant(2)))\n",
+    "print(tf.divide(tf.constant(2), tf.constant(2)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:41:48.604904800Z",
+     "start_time": "2023-10-18T08:41:48.581855500Z"
+    }
+   },
+   "id": "d2565eed1557e605"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(4.2, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다른타입의 연산들은 변환 해주면서 연산해야함\n",
+    "print(tf.cast(tf.constant(2), tf.float32) + tf.constant(2.2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:42:31.565791500Z",
+     "start_time": "2023-10-18T08:42:31.548584Z"
+    }
+   },
+   "id": "f5df31c8b4b0440b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 1차원 이상의 텐서 연산"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9d94f5f43702b98e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([1 2 3], shape=(3,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[1 2 3]\n",
+      " [1 2 3]], shape=(2, 3), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = tf.constant([1, 2, 3])\n",
+    "t2 = tf.constant([[1, 2, 3], [1, 2, 3]])\n",
+    "print(t1)\n",
+    "print(t2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:50:07.809645500Z",
+     "start_time": "2023-10-18T08:50:07.792383900Z"
+    }
+   },
+   "id": "96c04a16250b92eb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([2 4 6], shape=(3,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[2 4 6]\n",
+      " [2 4 6]], shape=(2, 3), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t1 + t1)\n",
+    "print(t1 + t2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:50:22.487423800Z",
+     "start_time": "2023-10-18T08:50:22.469657300Z"
+    }
+   },
+   "id": "89b9f165cbfef9da"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[2 4 6]\n",
+      " [2 4 6]], shape=(2, 3), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[0 0 0]\n",
+      " [0 0 0]], shape=(2, 3), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[1 4 9]\n",
+      " [1 4 9]], shape=(2, 3), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]], shape=(2, 3), dtype=float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t2 + t2)\n",
+    "print(t2 - t2)\n",
+    "print(t2 * t2)\n",
+    "print(t2 / t2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:48:34.347716100Z",
+     "start_time": "2023-10-18T08:48:34.329257100Z"
+    }
+   },
+   "id": "47412fd1d8318aff"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(10.0, shape=(), dtype=float32)\n",
+      "tf.Tensor([1 1 1], shape=(3,), dtype=int64)\n",
+      "tf.Tensor(\n",
+      "[[0.09003057 0.24472848 0.66524094]\n",
+      " [0.66524094 0.24472848 0.09003057]], shape=(2, 3), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = tf.constant([[4.0, 5.0, 6.0], \n",
+    "                 [10.0, 9.0, 8.0]])\n",
+    "\n",
+    "print(tf.reduce_max(c))\n",
+    "print(tf.argmax(c))\n",
+    "print(tf.nn.softmax(c))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T08:58:42.344096800Z",
+     "start_time": "2023-10-18T08:58:42.311021300Z"
+    }
+   },
+   "id": "2296dfc76a847936"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* reduce_max(): 텐서 값 중에서 최대값을 계산합니다.\n",
+    "* argmax(): 최대값의 위치를 반환합니다. 예제에서는 [4.0, 5.0, 6.0] 보다 [10.0, 9.0, 8.0]이 다 크기 때문에 [0 0 0]이 아니라 [1 1 1]의 결과를 보여주고 있습니다.\n",
+    "* nn.softmax(): 텐서의 값을 0과 1 사이의 값으로 보여줍니다. 예제에서는 [4.0, 5.0, 6.0] 값이 [0.09003057 0.24472848 0.66524094]으로 변환되었고, [10.0, 9.0, 8.0]이 [0.66524094 0.24472848 0.09003057]로 변환되었습니다."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6d8265c243f4d682"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -616,7 +873,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "124a7fc4c1dd558c"
+   "id": "d6b2d325a7c8b18"
   }
  ],
  "metadata": {
