--- a/1018_node/deeplearning_model.ipynb
+++ b/1018_node/deeplearning_model.ipynb
@@ -17,6 +17,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Sequential API\n",
+    "* Sequential API 는 모델이 순차적인 구조로 진행될때 사용하는 '간단한'방법\n",
+    "* 이 방법은 다중 입력 및 출력이 존재하는 등 복잡한 모델을 구성할 수 없음"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "da0952aba4de0a1f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'layers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# 첫번째 방법은 Sequential 객체를 생성 후, add()를 이용해서 사용할 레이어들을 추가하는 방법\u001B[39;00m\n\u001B[0;32m      2\u001B[0m model \u001B[38;5;241m=\u001B[39m models\u001B[38;5;241m.\u001B[39mSequential()\n\u001B[1;32m----> 3\u001B[0m model\u001B[38;5;241m.\u001B[39madd(\u001B[43mlayers\u001B[49m\u001B[38;5;241m.\u001B[39mInput(shape\u001B[38;5;241m=\u001B[39m(\u001B[38;5;241m28\u001B[39m, \u001B[38;5;241m28\u001B[39m)))\n\u001B[0;32m      4\u001B[0m model\u001B[38;5;241m.\u001B[39madd(layers\u001B[38;5;241m.\u001B[39mDense(\u001B[38;5;241m300\u001B[39m, activation\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrelu\u001B[39m\u001B[38;5;124m'\u001B[39m))\n\u001B[0;32m      5\u001B[0m model\u001B[38;5;241m.\u001B[39madd(layers\u001B[38;5;241m.\u001B[39mDense(\u001B[38;5;241m100\u001B[39m, activation\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrelu\u001B[39m\u001B[38;5;124m'\u001B[39m))\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'layers' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 첫번째 방법은 Sequential 객체를 생성 후, add()를 이용해서 사용할 레이어들을 추가하는 방법\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Input(shape=(28, 28)))\n",
+    "model.add(layers.Dense(300, activation='relu'))\n",
+    "model.add(layers.Dense(100, activation='relu'))\n",
+    "model.add(layers.Dense(10, activation='softmax'))\n",
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-18T13:00:15.067664500Z",
+     "start_time": "2023-10-18T13:00:14.178148200Z"
+    }
+   },
+   "id": "b0a1a1f473cbc085"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -24,7 +70,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "b0a1a1f473cbc085"
+   "id": "40c23a73f689d264"
   }
  ],
  "metadata": {
